src/app/components/content-box/project-page/project-page.component.css
:host {
  justify-content: space-evenly;
  height: 100%;
  display: flex;
  flex-direction: column;
}

#titleBar {
  justify-content: space-between;
  align-items: center;
}

#title {
  margin-top: 0px;
  margin-bottom: 0px;
}

#subTitle {
  margin-top: 0px;
  margin-bottom: 0px;
}

#titleIcon {
  width: 5vw;
  height: 5vw;
}

#techIconContainer {
  justify-content: flex-start;
  width: 40%;
}

#techIcon {
  width: 2.4vw;
  height: 2.4vw;
  margin-left: 0.5vw;
  margin-right: 0.5vw;
  margin-top: 0.5vh;
  margin-bottom: 0.5vh;
  transition: 0.2s;
  padding: 0.1vw;
}
#techIcon:hover {
  scale: 1.3;
  transition: 0.8s;
}
#contentBar {
  width: 100%;
  max-width: 100%;

  justify-content: space-between;
  align-items: center;
  margin-bottom: 1vh;
}
#contentImageContainer {
  position: relative;
  flex-basis: 40%;
}
#contentImage {
  width: 100%;
  height: auto;
  object-fit: contain;
}

#contentText {
  flex: 1 0 55%;
  max-height: 20vh;
  overflow-y: scroll;
  overflow-x: auto;
  padding: 1vw;
  border-radius: 1vw;
  transition: all 0.5s;
}
#contentText:hover {
  backdrop-filter: blur(10px);
  /* filter: invert(1); */
  scale: 1.5;
  background: rgba(252, 252, 252, 0.6);
  /* transition: all 0.5s; */
}

#footerBar {
  align-items: center;
  justify-content: space-between;
}

#leftButton,
#rightButton {
  background-color: transparent;
  border: none;
}

.pageButton {
  width: 4vw;
  height: 4vw;
}
button:hover {
  scale: 1.2;
  transition: scale 0.2s;
}

